# Projeto-Poetry

Latex_converter/: pyproject.toml
Latex_converter/dados/: cabeçalho.dvi
Latex_converter/relatorio/: cria.py
