[tool.poetry]
name = "latex-converter"
version = "0.1.0"
description = ""
authors = ["Gustavo Bianchi da Silva <gu.bianchi.s@gmail.com>"]
readme = "README.md"
packages = [{include = "latex_converter"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
